Removed IP hardcode, fixed swagger ip and moved it to TypeScript, added health endpoint
